[gd_scene load_steps=17 format=3 uid="uid://csa6smd3at7tf"]

[ext_resource type="FontFile" uid="uid://dpfp0r4gq6h4d" path="res://assets/ui/mainport.ttf" id="1_36ylp"]
[ext_resource type="Texture2D" uid="uid://r3se4stfbo4m" path="res://assets/background/background.png" id="1_htada"]
[ext_resource type="Script" path="res://src/main-menu.gd" id="1_x3e1o"]
[ext_resource type="Texture2D" uid="uid://bw80od2udayp4" path="res://assets/ui/gear.png" id="3_evviu"]
[ext_resource type="Texture2D" uid="uid://c3snw6owwn3cl" path="res://assets/ui/enter_fullscreen.png" id="4_2tbbo"]
[ext_resource type="Texture2D" uid="uid://6e6npygm6xgl" path="res://assets/ui/buttons/blue_button02.png" id="7_gro0e"]
[ext_resource type="Texture2D" uid="uid://cbvpqkufpfcdj" path="res://assets/ui/buttons/blue_button03.png" id="8_iooh8"]
[ext_resource type="AudioStream" uid="uid://cw2nmprael7ae" path="res://assets/sound/game-music.mp3" id="9_7sy6c"]
[ext_resource type="FontFile" uid="uid://br7j0ngbmc0f8" path="res://assets/ui/vt323.ttf" id="9_q18fm"]
[ext_resource type="AudioStream" uid="uid://duume0iti6ox" path="res://assets/sound/forward.wav" id="10_lkhpe"]
[ext_resource type="AudioStream" uid="uid://dylo1sbyjkg2p" path="res://assets/sound/back.wav" id="11_vmnpl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ybh8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dven5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_klsmf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7fvd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2qf0"]

[node name="main-menu" type="Node2D"]
script = ExtResource("1_x3e1o")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(162, 113)
scale = Vector2(1.05093, 1.05093)
texture = ExtResource("1_htada")

[node name="settings" type="TextureButton" parent="."]
offset_left = 7.0
offset_top = 192.0
offset_right = 39.0
offset_bottom = 224.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_evviu")

[node name="fullscreen" type="Button" parent="."]
offset_left = 376.0
offset_top = 7.0
offset_right = 424.0
offset_bottom = 55.0
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ybh8n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dven5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_klsmf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q7fvd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2qf0")
toggle_mode = true
icon = ExtResource("4_2tbbo")

[node name="logo" type="Label" parent="."]
offset_left = 146.0
offset_top = 9.0
offset_right = 255.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_36ylp")
theme_override_font_sizes/font_size = 20
text = "waves  
   of 
     waste"

[node name="play" type="TextureButton" parent="."]
offset_left = 132.0
offset_top = 79.0
offset_right = 322.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("7_gro0e")
texture_pressed = ExtResource("8_iooh8")

[node name="playtext" type="Label" parent="."]
offset_left = 132.0
offset_top = 79.0
offset_right = 264.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("9_q18fm")
theme_override_font_sizes/font_size = 20
text = "Play game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="trashmenu" type="TextureButton" parent="."]
offset_left = 132.0
offset_top = 115.0
offset_right = 322.0
offset_bottom = 164.0
scale = Vector2(0.7, 0.5)
texture_normal = ExtResource("7_gro0e")
texture_pressed = ExtResource("8_iooh8")

[node name="trashtext" type="Label" parent="."]
offset_left = 132.0
offset_top = 115.0
offset_right = 263.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("9_q18fm")
theme_override_font_sizes/font_size = 12
text = "View trash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="helpmenu" type="TextureButton" parent="."]
offset_left = 132.0
offset_top = 142.0
offset_right = 322.0
offset_bottom = 191.0
scale = Vector2(0.7, 0.5)
texture_normal = ExtResource("7_gro0e")
texture_pressed = ExtResource("8_iooh8")

[node name="helptext" type="Label" parent="."]
offset_left = 132.0
offset_top = 142.0
offset_right = 263.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("9_q18fm")
theme_override_font_sizes/font_size = 12
text = "Help"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gamemusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7sy6c")
autoplay = true
bus = &"music"

[node name="forwardsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lkhpe")
volume_db = 10.0
bus = &"sfx"

[node name="backsfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vmnpl")
volume_db = 3.0
bus = &"sfx"

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="trashmenu" to="." method="_on_trashmenu_pressed"]
[connection signal="pressed" from="helpmenu" to="." method="_on_helpmenu_pressed"]
